# aperx

./: .gitignore  CLAUDE.md  README.md  example_config.toml  pyproject.toml
aperx/: catalog.py  catalog_photutils.py  engine.py  image.py  psf.py  utils.py
aperx/data/: psfex_cat.param
